fix width on mobile phone
fix width on mobile

--- a/css/embed-pdf-viewer.css
+++ b/css/embed-pdf-viewer.css
@@ -1,7 +1,11 @@
-@media only screen and (min-device-width : 1024px) {
+iframe.embed-pdf-viewer {
+	margin: 0 auto;
+	display: block;
+	border-style: none;
+}
+
+@media only screen and (max-device-width : 768px) {
 	iframe.embed-pdf-viewer {
-		margin: 0 auto;
-		display: block;
-		border-style: none;
+		width: 100%;
 	}
 }
